fixed white space issue

--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,23 @@
 }
 
 /* Top Banner */
-  
-  .top-banner > img{
-    width: 100%;
-    max-height: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-  }
+.top-banner{
+  margin-top: -20px;
+}
+
+.top-banner > img{
+  width: 100%;
+  max-height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
   
   /* NAV */
+.nav-bar{
+  margin-bottom: -20px;
+}
+
   .nav-bar a{
     color:white;
     font-family: Progression;
